Add new host Activity and Fragment for form entry

--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -331,6 +331,7 @@ the specific language governing permissions and limitations under the License.
             </intent-filter>
         </activity>
         <activity android:name="org.odk.collect.android.formhierarchy.FormHierarchyFragmentHostActivity" />
+        <activity android:name="org.odk.collect.android.formhierarchy.FormEntryFragmentHostActivity" />
     </application>
 
     <queries>
