Convert entity list to Compose

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -98,6 +98,7 @@ cameraxVideo = { group = "androidx.camera", name = "camera-video", version.ref =
 jsoup = { group = "org.jsoup", name = "jsoup", version = "1.21.2" }
 mlkit-barcodescanning = { group = "com.google.android.gms", name = "play-services-mlkit-barcode-scanning", version = "18.3.1" }
 camera-mlkit-vision = { group = "androidx.camera", name = "camera-mlkit-vision", version.ref = "camerax" }
+runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
 
 # Test dependencies
 junit = { group = "junit", name = "junit", version = "4.13.2" }
